# codewars

./: .gitignore  Cargo.toml  README.md
src/: challenge.rs  lib.rs  main.rs
src/_01_07_2021/: algo.rs  phone_directory.rs
src/_13_07_2021/: array_diff.rs  callback.rs  fibo_akin.rs
src/_14_07_2021/: molecule_to_atoms.rs
src/_17_07_2021/: is_my_friend_cheating.rs  mix.rs  snail.rs
src/_29_06_2021/: build_a_pile_of_cubes.rs  iq_test.rs  multiple_of_3_or_5.rs  typed.rs
src/_30_06_2021/: n_queens_problem.rs  which_are_in.rs
src/cw_01_07_2021/: phone_directory.rs
src/cw_13_07_2021/: anagram.rs  array_diff.rs  stop_gninnips_my_sdrow.rs
src/cw_14_07_2021/: if_you_can_read_this.rs
src/cw_17_07_2021/: factorial_tail.rs  mix.rs
src/cw_18_07_2021/: common_denominator.rs  count_ip_addresses.rs  next_bigger_number_with_same_digits.rs  range_extraction.rs
src/cw_20_07_2021/: street_fighter_2_character_selection.rs  street_fighter_2_character_selection_part_2.rs
src/cw_21_07_2021/: getting_along_with_integer_partitions.rs
src/cw_24_07_2021/: human_readable_duration_format.rs  make_a_spiral.rs  rail_fence_cipher.rs  validate_sudoku.rs
src/cw_29_06_2021/: find_the_divisor.rs  iq_test.rs
src/cw_30_06_2021/: n_queens_problem.rs  rgb_to_hex_conversion.rs  tortoise_racing.rs
