[package]
name = "codewars"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.4.7"
hex = "0.4.3"
lexical-sort = "0.3.0"
failure = "0.1.8"
regex = "1"
csv = "1.1.6"
meval = "0.2.0"
num-bigint = "0.4"